--- a/fpc.html
+++ b/fpc.html
@@ -30,7 +30,7 @@
 
    <div>
       
-           <img id="imgEquipo" width="500" height="500" src="colombia.png">
+           <img id="imgEquipo" width="500" height="500" src="imagenes/colombia.png">
 
        
            <h3> 🌟 Estrellas  </h3> <p id="estrellitas"></p>
