--- a/fpc.html
+++ b/fpc.html
@@ -20,6 +20,7 @@
         <option value="tolima">Tolima</option>
         <option value="medellin">Medellin</option>
         <option value="pasto">Pasto</option>
+        <option value="popayan">Popayan</option>
     
 
     </select>
