--- a/categoriasFutbol.html
+++ b/categoriasFutbol.html
@@ -116,7 +116,7 @@
                   <br><br>
 
 
-                  <input class="btn btn-primary" data-toggle="button" aria-pressed="false" type='submit' id='btn' value='Crear Equipo' />
+                  <input class="modal-footer"  type='submit' id='btn' class='btn btn-primary'value='Crear Equipo' />
                   
 
                 </form>
