--- a/fpc.html
+++ b/fpc.html
@@ -21,7 +21,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="fpc.html">Inicio</a></li>
         <li><a href="categoriasFutbol.html">Categorias</a></li>
-        <li><a href="sort.html">Tabla de posiciones</a></li>
+        <li><a href="tablaPosiciones.html">Tabla de posiciones</a></li>
       </ul>
     </div>
   </nav>
