Commir agregando index.html para github

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="navbar-brand" href="fpc.html">Liga Aguila</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="fpc.html">Inicio</a></li>
+        <li class="active"><a href="index.html">Inicio</a></li>
         <li><a href="categoriasFutbol.html">Categorias</a></li>
         <li><a href="tablaPosiciones.html">Tabla de posiciones</a></li>
       </ul>
