--- a/tablaPosiciones.html
+++ b/tablaPosiciones.html
@@ -22,7 +22,7 @@
               <a class="navbar-brand" href="fpc.html">Liga Aguila</a>
             </div>
             <ul class="nav navbar-nav">
-              <li><a href="fpc.html">Inicio</a></li>
+              <li><a href="index.html">Inicio</a></li>
               <li><a href="categoriasFutbol.html">Categorias</a></li>
               <li class="active"><a href="tablaPosiciones.html">Tabla de posiciones</a></li>
             </ul>
@@ -50,7 +50,7 @@
                   <span class="country-name-container">
                     &nbsp;
                     <span class="country-name left"><b>
-                      <span class="fullname">ARGENTINA</span>
+                      <span class="fullname">equiposObjetos[6].nombre;</span>
                       <span class="shortname">ARG</span>
                     </b></span>
                   </span>
