cambios index.tml

--- a/tablaPosiciones.html
+++ b/tablaPosiciones.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand" href="fpc.html">Liga Aguila</a>
+              <a class="navbar-brand" href="index.html">Liga Aguila</a>
             </div>
             <ul class="nav navbar-nav">
               <li><a href="index.html">Inicio</a></li>
